[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/QuestionHUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/big_match_35.fnt" type="BitmapFont" id=2]

[sub_resource type="Animation" id=1]

resource/name = "open_question"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("question:rect/size")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 159, 196 ), Vector2( 1280, 720 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("question:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 588, 250 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("question:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="QuestionHUD" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
script/script = ExtResource( 1 )

[node name="question" type="Control" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="Panel" type="Panel" parent="question"]

visibility/opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="Quiz" type="VBoxContainer" parent="question"]

process/pause_mode = 2
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 1

[node name="question" type="Label" parent="question/Quiz"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 245.0
margin/right = 1280.0
margin/bottom = 275.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "คำถาม"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="choice1" type="Button" parent="question/Quiz"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 283.0
margin/right = 1280.0
margin/bottom = 325.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "คำตอบ 1"
flat = false

[node name="choice2" type="Button" parent="question/Quiz"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 333.0
margin/right = 1280.0
margin/bottom = 375.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "คำตอบ 2"
flat = false

[node name="choice3" type="Button" parent="question/Quiz"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 383.0
margin/right = 1280.0
margin/bottom = 425.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "คำตอบ 3"
flat = false

[node name="choice4" type="Button" parent="question/Quiz"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 433.0
margin/right = 1280.0
margin/bottom = 475.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "คำตอบ 4"
flat = false

[node name="open_question" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/open_question = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="button_up" from="question/Quiz/choice1" to="." method="_on_choice1_button_up"]

[connection signal="button_up" from="question/Quiz/choice2" to="." method="_on_choice2_button_up"]

[connection signal="button_up" from="question/Quiz/choice3" to="." method="_on_choice3_button_up"]

[connection signal="button_up" from="question/Quiz/choice4" to="." method="_on_choice4_button_up"]


